# ConsoleTester

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research-topic.md
.github/workflows/: docs.yml  rust.yml
docs/: .rustc_info.json  index.html
docs/debug/.fingerprint/RustConsoleEmulator-adb53183777f278f/: doc-bin-RustConsoleEmulator-adb53183777f278f  doc-bin-RustConsoleEmulator-adb53183777f278f.json
docs/doc/: COPYRIGHT.txt  aliases.js  main.js  normalize.css  search-index.js  settings.html  source-files.js
docs/doc/RustConsoleEmulator/: all.html  index.html
docs/doc/console_tester/: all.html  fn.main.html  index.html  sidebar-items.js  struct.TermStrings.html
docs/doc/console_tester/buffer/: enum.OS.html  fn.error_print.html  index.html  sidebar-items.js  struct.BufWriter.html  struct.TermWriter.html  struct.TestWriter.html
docs/doc/console_tester/term/: index.html  sidebar-items.js  struct.TermStrings.html
docs/doc/implementors/core/clone/: trait.Clone.js
docs/doc/implementors/core/fmt/: trait.Debug.js
docs/doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/doc/implementors/std/io/: trait.Write.js
docs/doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/doc/rust_console_emulator/: all.html  fn.main.html  fn.print_lib_message.html  index.html  sidebar-items.js
docs/doc/rust_console_emulator/docs/: fn.add_one.html  index.html  sidebar-items.js
docs/doc/rust_console_emulator/message/: fn.print_message.html  index.html  sidebar-items.js
docs/doc/src/RustConsoleEmulator/: main.rs.html
docs/doc/src/console_tester/: buffer.rs.html  lib.rs.html  reg.rs.html  term.rs.html
docs/doc/src/rust_console_emulator/: docs.rs.html  lib.rs.html  main.rs.html  message.rs.html
src/: buffer.rs  docs.rs  lib.rs  main.rs  message.rs  reg.rs  regex.rs  term.rs  test.rs
testing/: Cargo.toml
testing/src/: buffer.rs  doodles.rs  lib.rs  main.rs  structs.rs  var.rs
