[package]
name = "console_tester"
version = "0.1.0"
authors = ["Shawn Hice <shawnhice@gmail.com>", "David Meyer", "Grady Ku", "Ian Gauldin", "Nick Hanemann", "Brad Hopper"]
edition = "2018"
description = "A console output testing framework"
homepage = "https://re-capstone.github.io/RustConsoleEmulator/doc/rust_console_emulator/index.html"
license = "Apache-2.0"
keywords = ["cli", "console", "development", "terminal", "testing"]
include = [
    "src/*.rs",
    "Cargo.Toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "console_tester"         # The name of the target.
path = "src/lib.rs"             # The source file of the target.
test = true                     # Is tested by default.
doctest = true                  # Documentation examples are tested by default.
bench = false                   # Is benchmarked by default.
doc = true                      # Is documented by default.
plugin = false                  # Used as a compiler plugin (deprecated).
proc-macro = false              # Set to `true` for a proc-macro library.
harness = true                  # Use libtest harness.
edition = "2018"                # The edition of the target.
crate-type = ["lib"]            # The crate types to generate.
required-features = []          # Features required to build this target (N/A for lib).

[dependencies]
terminfo = "0.7.0"
